--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,36 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="col-md-6 col-md-offset-3">
+  <h1>Create new account</h1>
+  <p>Please enter the following information.</p>
+  <hr>
+
+  <%= form_for @user do |f| %>
+    <%= render 'shared/error_messages' %>
+
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, 'Confirmation' %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </div>
+
+    <hr>
+
+    <div class="form-group">
+    <%= f.submit "Create Account", class: 'btn btn-success btn-block' %>
+    </div>
+  <% end %>
+
+</div>
