--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,13 +14,30 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to '首页', root_path %></li>
-        <li><%= link_to '关于', about_path %></li>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'About', about_path %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to '帮助', help_path %></li>
-        <li><%= link_to '注册', signup_path %></li>
+        <li><%= link_to 'Help', help_path %></li>
+
+        <% if logged_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <%= current_user.name %>
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Profile', current_user %></li>
+            <li class="divider"></li>
+            <li><%= link_to 'Log out', logout_path, method: 'delete' %></li>
+          </ul>
+        </li>
+        <li></li>
+
+        <% else %>
+        <li><%= link_to 'Log in', login_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
