--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,41 @@
-<h1>Editing User</h1>
+<div class="col-md-6 col-md-offset-3">
+  <h1>Editing User</h1>
+  <p>Please enter the following information.</p>
+  <hr>
 
-<%= render 'form' %>
+  <%= form_for @user do |f| %>
+    <%= render "shared/error_messages" %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </div>
+
+    <hr>
+
+    <div class="form-group">
+      <%= f.submit "Save Changes", class: 'btn btn-success btn-block' %>
+    </div>
+
+  <% end %>
+
+  <p>
+    <%= link_to 'Show', @user %> |
+    <%= link_to 'Back', users_path %>
+  </p>
+</div>
