--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
         <li><%= link_to 'Help', help_path %></li>
 
         <% if logged_in? %>
+        <li><%= link_to 'Users', users_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <%= current_user.name %>
