--- a/app/views/fluxes/index.html.erb
+++ b/app/views/fluxes/index.html.erb
@@ -2,29 +2,11 @@
 
 <h1>Listing Fluxes</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Motion</th>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= will_paginate renderer: BootstrapPagination::Rails %>
 
-  <tbody>
-    <% @fluxes.each do |flux| %>
-      <tr>
-        <td><%= flux.motion %></td>
-        <td><%= flux.content %></td>
-        <td><%= flux.user_id %></td>
-        <td><%= link_to 'Show', flux %></td>
-        <td><%= link_to 'Edit', edit_flux_path(flux) %></td>
-        <td><%= link_to 'Destroy', flux, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render @fluxes %>
+
+<%= will_paginate renderer: BootstrapPagination::Rails %>
 
 <br>
 
