--- a/app/views/fluxes/index.html.erb
+++ b/app/views/fluxes/index.html.erb
@@ -1,13 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Fluxes</h1>
+<div class="col-md-6 col-md-offset-3">
+  <h1>Listing Fluxes</h1>
 
-<%= will_paginate renderer: BootstrapPagination::Rails %>
+  <%= link_to 'New Flux', new_flux_path, class: 'btn btn-success' %>
 
-<%= render @fluxes %>
+  <hr>
 
-<%= will_paginate renderer: BootstrapPagination::Rails %>
+  <%= render @fluxes %>
 
-<br>
+  <%= will_paginate renderer: BootstrapPagination::Rails %>
 
-<%= link_to 'New Flux', new_flux_path %>
+</div>
