--- a/app/views/fluxes/show.html.erb
+++ b/app/views/fluxes/show.html.erb
@@ -1,19 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Motion:</strong>
-  <%= @flux.motion %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @flux.content %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @flux.user_id %>
-</p>
+<%= render @flux %>
 
 <%= link_to 'Edit', edit_flux_path(@flux) %> |
 <%= link_to 'Back', fluxes_path %>
