--- a/app/views/fluxes/_form.html.erb
+++ b/app/views/fluxes/_form.html.erb
@@ -1,29 +1,20 @@
 <%= form_for(@flux) do |f| %>
-  <% if @flux.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@flux.errors.count, "error") %> prohibited this flux from being saved:</h2>
+  <%= render 'shared/error_messages', object: f.object %>
 
-      <ul>
-      <% @flux.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
+  <div class="form-group">
     <%= f.label :motion %><br>
-    <%= f.text_field :motion %>
+    <%= f.text_field :motion, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :content %><br>
-    <%= f.text_field :content %>
+    <%= f.text_area :content, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <%= f.hidden_field :user_id, class: 'form-control' %>
+
+  <hr>
+
+  <div class="form-group">
+    <%= f.submit 'Create', class: 'btn btn-success btn-block' %>
   </div>
 <% end %>
