--- a/app/views/fluxes/new.html.erb
+++ b/app/views/fluxes/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Flux</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>New Flux</h1>
+    <hr>
+    
+    <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', fluxes_path %>
+    <%= link_to 'Back', fluxes_path %>
+  </div>
+</div>
