--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <hr>
 
   <%= form_for @user do |f| %>
-    <%= render "shared/error_messages" %>
+    <%= render 'shared/error_messages', object: f.object %>
 
     <div class="form-group">
       <%= f.label :name %>
