--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,6 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<% if logged_in? && @user == current_user %>
+    <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-default' %>
+<% end %>
