--- a/app/views/tokens/_token.html.erb
+++ b/app/views/tokens/_token.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td><%= token.name %></td>
   <td><%= token.token %></td>
+  <td><%= token.deviceID %></td>
   <td>
     <%= link_to "Destroy", token, method: :delete, data: { confirm: "You sure?" }, class: "btn btn-default btn-sm" %>
   </td>
