--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,7 @@
     <%= yield %>
   </div>
 
-  <footer class="container">
-    <hr>
-    <p class="text-primary pull-right">
-      F 0.0.1
-    </p>
-    <%= debug(params) if Rails.env.development? %>
-  </footer>
+  <%= render 'layouts/footer' %>
 
 
 </body>
