--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Home") %>
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-<p>
-  hello,world.
-</p>
+
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>Just say something...</p>
+  <br>
+  <p><a class="btn btn-success btn-lg" href="#" role="button">Learn more</a></p>
+</div>
