--- a/app/views/tokens/index.html.erb
+++ b/app/views/tokens/index.html.erb
@@ -8,6 +8,7 @@
         <tr>
           <th>name</th>
           <th>token</th>
+          <th>deviceID</th>
           <th>edit</th>
         </tr>
       </thead>
