--- a/app/views/fluxes/index.html.erb
+++ b/app/views/fluxes/index.html.erb
@@ -1,14 +1,29 @@
 <% provide(:title, "Fluxes") %>
 
-<div class="col-md-6 col-md-offset-3">
-  <h1>Listing Fluxes</h1>
+<div class="row">
+  <div class="col-md-4">
+    <% if logged_in? %>
+        <section class="user_info">
+          <%= render 'shared/user_info' %>
+        </section>
+        <hr>
+        <section class="micropost_form">
+          <%= render 'shared/flux_form' %>
+        </section>
+    <% else %>
+        <%= link_to "Log in", login_path, class: 'btn btn-success btn-block' %>
+    <% end %>
+  </div>
 
-  <%= link_to 'New Flux', new_flux_path, class: 'btn btn-success' %>
+  <div class="col-md-8">
+    <h1>Listing Fluxes</h1>
 
-  <hr>
+    <!--<%= link_to 'New Flux', new_flux_path, class: 'btn btn-success' %>-->
 
-  <%= render @fluxes %>
+    <hr>
 
-  <%= will_paginate renderer: BootstrapPagination::Rails %>
+    <%= render @fluxes %>
 
+    <%= will_paginate renderer: BootstrapPagination::Rails %>
+  </div>
 </div>
