support upload picture

--- a/app/views/fluxes/_flux.html.erb
+++ b/app/views/fluxes/_flux.html.erb
@@ -11,6 +11,7 @@
     </h4>
     <p>
       <%= flux.content %>
+      <%= image_tag flux.picture.url, class: "img-responsive" if flux.picture? %>
     </p>
 
     <p>
