--- a/app/views/fluxes/_form.html.erb
+++ b/app/views/fluxes/_form.html.erb
@@ -1,20 +1,35 @@
 <%= form_for(@flux) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+    <%= render 'shared/error_messages', object: f.object %>
 
-  <div class="form-group">
-    <%= f.label :motion %><br>
-    <%= f.text_field :motion, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :content %><br>
-    <%= f.text_area :content, class: 'form-control' %>
-  </div>
+    <div class="form-group">
+      <%= f.label :motion %><br>
+      <%= f.text_field :motion, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :content %><br>
+      <%= f.text_area :content, class: 'form-control' %>
+    </div>
 
-  <%= f.hidden_field :user_id, class: 'form-control' %>
+    <div class="form-group">
+      <%= f.file_field :picture, class: "form-control", accept: "image/jpeg,image/gif,image/png" %>
+    </div>
 
-  <hr>
+    <%= f.hidden_field :user_id, class: 'form-control' %>
 
-  <div class="form-group">
-    <%= f.submit 'Create', class: 'btn btn-success btn-block' %>
-  </div>
+    <hr>
+
+    <div class="form-group">
+      <%= f.submit 'Create', class: 'btn btn-success btn-block' %>
+    </div>
 <% end %>
+
+<script>
+    $(function(){
+        $('#micropost_picture').bind('change', function() {
+            var size_in_megabytes = this.files[0].size/1024/1024;
+            if (size_in_megabytes > 5) {
+                alert('Maximum file size is 5MB. Please choose a smaller file.');
+            }
+        });
+    });
+</script>
