--- a/app/views/cats/_cat.html.erb
+++ b/app/views/cats/_cat.html.erb
@@ -1,25 +1,24 @@
 <div class="media">
   <div class="media-left">
     <a href="#">
-      <%= gravatar_for flux.user, size: 50 %>
+
     </a>
   </div>
   <div class="media-body">
     <h4 class="media-heading">
-      <%= link_to flux.user.name, flux.user %>
-      <%= flux.motion %>:
+      <%= link_to cat.name, cat.user %>
+      <%= cat.breed %>:
     </h4>
     <p>
-      <%= flux.content %>
-      <%= image_tag flux.picture.url, class: "img-responsive" if flux.picture? %>
+      <%= cat.breed %>
     </p>
 
     <p>
-      <%= link_to 'Show', flux, class:'btn btn-default btn-xs' %>
+      <%= link_to 'Show', cat, class:'btn btn-default btn-xs' %>
 
-      <% if logged_in? and current_user?(flux.user) %>
-      <%= link_to 'Edit', edit_flux_path(flux), class:'btn btn-default btn-xs' %>
-      <%= link_to 'Destroy', flux, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default btn-xs' %>
+      <% if logged_in? and current_user?(cat.user) %>
+      <%= link_to 'Edit', edit_cat_path(cat), class:'btn btn-default btn-xs' %>
+      <%= link_to 'Destroy', cat, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default btn-xs' %>
       <% end %>
     </p>
 
