--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'Fluxes', fluxes_path %></li>
+        <li><%= link_to 'Cats', cats_path %></li>
         <li><%= link_to 'About', about_path %></li>
       </ul>
 
