--- a/app/views/private_messages/_form.html.erb
+++ b/app/views/private_messages/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :toUser_id %><br>
-    <%= f.text_field :toUser_id %>
+    <%= f.label :to_user_id %><br>
+    <%= f.text_field :to_user_id %>
   </div>
   <div class="field">
-    <%= f.label :fromUser_id %><br>
-    <%= f.text_field :fromUser_id %>
+    <%= f.label :from_user_id %><br>
+    <%= f.text_field :from_user_id %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
