--- a/app/views/private_messages/show.html.erb
+++ b/app/views/private_messages/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Touser:</strong>
-  <%= @private_message.toUser %>
+  <%= @private_message.to_user %>
 </p>
 
 <p>
   <strong>Fromuser:</strong>
-  <%= @private_message.fromUser %>
+  <%= @private_message.from_user %>
 </p>
 
 <p>
